deploy/ingress-class-alb.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
  labels:
    app.kubernetes.io/name: crm
    app.kubernetes.io/component: ingress
  annotations:
    ingressclass.kubernetes.io/is-default-class: "false"
spec:
  controller: ingress.alb.yc.io/yc-alb-ingress-controller
